Updated security - refactored